CB-26689 Environment Service should validate the requested AZs and persist as part of environment creation Following things need to be done :
Define configuration for GCP AZs as {"a", "b", "c"}
If AZs are not provided in the request for GCP environment creation, AZs should be populated as {"<region>-a", "<region>-b", "<region>-c"}
else it should be populated as AZs from request